# renderer

./: .gitignore  CMakeLists.txt  README.md
src/: .a.out  .structs.h  coloring.h  fuctions.h  functions.h  hit.h  main.cpp  parse.cpp  parse.h  parse1.cpp  parse11111.cpp  render-tree.cpp  render-tree.h  structs.h  test-basic.cpp
src/app/: CMakeLists.txt
src/pio/: CMakeLists (3).txt  coloring.h  display.h  functions.h  render-tree.h
test-models/CedCo - LiAs R17 Venom II Revamp_model/: .directory  CedCo - LiAs R17 Venom II Revamp_export.mtl
test-models/eye/: .directory
